--- a/Public/app.css
+++ b/Public/app.css
@@ -5,7 +5,7 @@ body{
     display: flex !important;
     flex-direction: column !important;
     text-align: justify;
-    background-image: url("https://www.transparenttextures.com/patterns/black-linen.png") !important;
+    background-image: url("https://www.toptal.com/designers/subtlepatterns/patterns/bush.png") !important;
     background-position: center;
     background-attachment: fixed;
     
